--- a/WebPractica2/Views/Shared/_Layout.cshtml
+++ b/WebPractica2/Views/Shared/_Layout.cshtml
@@ -17,13 +17,29 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nombre de aplicación", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Practica 2", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
+                  
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Mantenimiento <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Artist", "Index", "Artist")</li>
+                            <li>@Html.ActionLink("MediaType", "Index", "MediaType")</li>
+                            <li>@Html.ActionLink("Playlist", "Index", "Playlist")</li>
+                            <li>@Html.ActionLink("Género", "Index", "Genre")</li>
+                            <li>@Html.ActionLink("Album", "Index", "Album")</li>
+                            <li>@Html.ActionLink("Track", "Index", "Track")</li>
+                            <li>@Html.ActionLink("Employee", "Index", "Employee")</li>
+                            <li>@Html.ActionLink("Customer", "Index", "Customer")</li>
+                            <li>@Html.ActionLink("Invoice", "Index", "Invoice")</li>
+                            <li>@Html.ActionLink("InvoiceLine", "Index", "InvoiceLine")</li>
+
+
+                        </ul>
+                    </li>
+
                 </ul>
             </div>
         </div>
